# server/docs/swagger.yaml
@@ -1044,6 +1044,28 @@ paths:
       summary: Get task image
       tags:
       - Task
+  /task/info:
+    get:
+      description: Info task
+      parameters:
+      - description: id
+        in: query
+        name: id
+        required: true
+        type: integer
+      - description: x-token
+        in: header
+        name: x-token
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Info Task
+      tags:
+      - Task
   /task/locate/{id}:
     get:
       description: get task image of location
